--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"next": "12.2.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-scroll": "^1.8.7",
 		"react-slick": "^0.29.0",
 		"react-use-scroll-snap": "^0.0.4",
 		"resize-observer-polyfill": "^1.5.1"
