--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-scroll": "^1.8.7",
 		"react-slick": "^0.29.0",
 		"react-use-scroll-snap": "^0.0.4",
-		"resize-observer-polyfill": "^1.5.1"
+		"resize-observer-polyfill": "^1.5.1",
+		"sharp": "^0.30.7"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.2",
